force-app/main/default/objects/Case/fields/DX_Related_Ticket__c.field-meta.xml
<CustomField>
    <fullName>DX_Related_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Tickets</relationshipLabel>
    <relationshipName>Related_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>