force-app/main/default/objects/Case/fields/DX_Relevant_Package_SR_Number__c.field-meta.xml
<CustomField>
    <fullName>DX_Relevant_Package_SR_Number__c</fullName>
    <label>Relevant Package SR Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>