force-app/main/default/objects/Case/fields/DX_Request_Support_RHs__c.field-meta.xml
<CustomField>
    <fullName>DX_Request_Support_RHs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Support (RH&apos;s)</label>
    <type>Checkbox</type>
</CustomField>