force-app/main/default/objects/Case/fields/DX_Request_Type_Contracts__c.field-meta.xml
<CustomField>
    <fullName>DX_Request_Type_Contracts__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assign &amp; Assumption</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>