force-app/main/default/objects/Case/fields/DX_Requested_Actions__c.field-meta.xml
<CustomField>
    <fullName>DX_Requested_Actions__c</fullName>
    <label>Requested Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>