force-app/main/default/objects/Case/fields/DX_Requested_Due__c.field-meta.xml
<CustomField>
    <fullName>DX_Requested_Due__c</fullName>
    <label>Requested Due</label>
    <length>100</length>
    <type>Text</type>
</CustomField>