force-app/main/default/objects/Case/fields/DX_Requestor__c.field-meta.xml
<CustomField>
    <fullName>DX_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests (Requestor)</relationshipLabel>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>