force-app/main/default/objects/Case/fields/DX_Rules_Regulations__c.field-meta.xml
<CustomField>
    <fullName>DX_Rules_Regulations__c</fullName>
    <formula>&quot;I have read and agree to the facility rules and regulations as stated in the Netrality Customer Handbook&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rules &amp; Regulations</label>
    <type>Text</type>
</CustomField>