force-app/main/default/objects/Case/fields/DX_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>DX_Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Order</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>