force-app/main/default/objects/Case/fields/DX_Services_to_disconnect__c.field-meta.xml
<CustomField>
    <fullName>DX_Services_to_disconnect__c</fullName>
    <inlineHelpText>What services are you looking to disconnect?</inlineHelpText>
    <label>Services to disconnect ?</label>
    <type>TextArea</type>
</CustomField>