force-app/main/default/objects/Case/fields/DX_Shipment_Requires_Packaging_to_Pickup__c.field-meta.xml
<CustomField>
    <fullName>DX_Shipment_Requires_Packaging_to_Pickup__c</fullName>
    <inlineHelpText>Does this shipment require packaging prior to pick-up?</inlineHelpText>
    <label>Shipment requires packaging to pick-up?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, additional packaging is requested</fullName>
            </value>
            <value>
                <fullName>No, ready for pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>