force-app/main/default/objects/Case/fields/DX_Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Shipping_Type__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Pallet/Freight</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Cabinet</fullName>
            </value>
            <value>
                <fullName>Small Package (Under 20lbs)</fullName>
            </value>
            <value>
                <fullName>Large Package (Over 20lbs)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>