force-app/main/default/objects/Case/fields/DX_Site__c.field-meta.xml
<CustomField>
    <fullName>DX_Site__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1102 Grand</fullName>
            </value>
            <value>
                <fullName>7801 Nieman Road</fullName>
            </value>
            <value>
                <fullName>210 N Tucker</fullName>
            </value>
            <value>
                <fullName>900 Walnut</fullName>
            </value>
            <value>
                <fullName>1301 Fannin</fullName>
            </value>
            <value>
                <fullName>401 N Broad</fullName>
            </value>
            <value>
                <fullName>717 S Wells</fullName>
            </value>
            <value>
                <fullName>701 W Henry</fullName>
            </value>
            <value>
                <fullName>733 W Henry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>