force-app/main/default/objects/Case/fields/DX_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>DX_Site_Location__c</fullName>
    <label>Site Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Houston, Texas 77002</fullName>
            </value>
            <value>
                <fullName>Chicago, IL 60482</fullName>
            </value>
            <value>
                <fullName>St. Louis, MO 63101</fullName>
            </value>
            <value>
                <fullName>St. Louis, MO 63102</fullName>
            </value>
            <value>
                <fullName>Kansas City, MO 64106</fullName>
            </value>
            <value>
                <fullName>Indianapolis, IN 46225</fullName>
            </value>
            <value>
                <fullName>Philadelphia, PA 19108</fullName>
            </value>
            <value>
                <fullName>Shawnee, KS 66214</fullName>
            </value>
            <value>
                <fullName>401 N Broad Street</fullName>
            </value>
            <value>
                <fullName>Philadelphia PA 19107</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>