force-app/main/default/objects/Case/fields/DX_SLA__c.field-meta.xml
<CustomField>
    <fullName>DX_SLA__c</fullName>
    <formula>(DX_Pickup_Time__c - CreatedDate ) *24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>