force-app/main/default/objects/Case/fields/DX_SLA_In_Violation__c.field-meta.xml
<CustomField>
    <fullName>DX_SLA_In_Violation__c</fullName>
    <formula>IF( ISPICKVAL( Priority , &apos;Urgent&apos;) &amp;&amp; DX_SLA__c &gt; 1, TRUE, IF( ISPICKVAL( Priority , &apos;High&apos;) &amp;&amp; DX_SLA__c &gt; 2, TRUE, IF( ISPICKVAL( Priority , &apos;Normal&apos;) &amp;&amp; DX_SLA__c &gt; 24, TRUE, FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA In Violation</label>
    <type>Checkbox</type>
</CustomField>