force-app/main/default/objects/Case/fields/DX_Tech_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_Tech_Contact_Name__c</fullName>
    <label>Tech Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>