force-app/main/default/objects/Case/fields/DX_Tech_Contact_Tel_Order_Initiator__c.field-meta.xml
<CustomField>
    <fullName>DX_Tech_Contact_Tel_Order_Initiator__c</fullName>
    <label>Tech Contact Tel#</label>
    <type>Phone</type>
</CustomField>