force-app/main/default/objects/Case/fields/DX_Term__c.field-meta.xml
<CustomField>
    <fullName>DX_Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>36 months</fullName>
            </value>
            <value>
                <fullName>60 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>