force-app/main/default/objects/Case/fields/DX_Third_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>DX_Third_Party_Email__c</fullName>
    <label>Third Party Email</label>
    <type>Email</type>
</CustomField>