force-app/main/default/objects/Case/fields/DX_Third_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_Third_Party_Name__c</fullName>
    <label>Third Party Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>