force-app/main/default/objects/Case/fields/DX_Third_Party_Phone__c.field-meta.xml
<CustomField>
    <fullName>DX_Third_Party_Phone__c</fullName>
    <label>Third Party Phone</label>
    <type>Phone</type>
</CustomField>