force-app/main/default/objects/Case/fields/DX_Time_In_Storage__c.field-meta.xml
<CustomField>
    <fullName>DX_Time_In_Storage__c</fullName>
    <label>Duration of Time in Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than a week</fullName>
            </value>
            <value>
                <fullName>Less than a month</fullName>
            </value>
            <value>
                <fullName>More than a month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>