force-app/main/default/objects/Case/fields/DX_Time_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>DX_Time_of_Issue__c</fullName>
    <label>Time of Issue</label>
    <type>DateTime</type>
</CustomField>