force-app/main/default/objects/Case/fields/DX_Time_Period_Covered__c.field-meta.xml
<CustomField>
    <fullName>DX_Time_Period_Covered__c</fullName>
    <label>Time Period Covered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year to Date</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>