force-app/main/default/objects/Case/fields/DX_Title__c.field-meta.xml
<CustomField>
    <fullName>DX_Title__c</fullName>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>