force-app/main/default/objects/Case/fields/DX_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>DX_Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>