force-app/main/default/objects/Case/fields/DX_Type_of_Inventory__c.field-meta.xml
<CustomField>
    <fullName>DX_Type_of_Inventory__c</fullName>
    <label>Type of Inventory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Connect</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>