force-app/main/default/objects/Case/fields/DX_View_Invoices__c.field-meta.xml
<CustomField>
    <fullName>DX_View_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Invoices</label>
    <type>Checkbox</type>
</CustomField>