force-app/main/default/objects/Case/fields/DX_When_would_you_like_the_meeting__c.field-meta.xml
<CustomField>
    <fullName>DX_When_would_you_like_the_meeting__c</fullName>
    <label>When would you like the meeting?</label>
    <type>Date</type>
</CustomField>