force-app/main/default/objects/Case/fields/DX_Who_is_the_Access_for__c.field-meta.xml
<CustomField>
    <fullName>DX_Who_is_the_Access_for__c</fullName>
    <label>Who is the Access for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>Third- Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>