force-app/main/default/objects/Case/fields/DX_Xconnect_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>DX_Xconnect_Order_Number__c</fullName>
    <formula>CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xconnect Order Number</label>
    <type>Text</type>
</CustomField>