force-app/main/default/objects/Case/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>Issue day of today for Customer Ready Notice generation.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>