force-app/main/default/objects/Case/recordTypes/DX_Access_Request.recordType-meta.xml
<RecordType>
    <fullName>DX_Access_Request</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Access Request</label>
</RecordType>