force-app/main/default/objects/Case/recordTypes/DX_Accounting_Request.recordType-meta.xml
<RecordType>
    <fullName>DX_Accounting_Request</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Accounting Request</label>
</RecordType>