force-app/main/default/objects/Case/recordTypes/DX_Contracts_Request.recordType-meta.xml
<RecordType>
    <fullName>DX_Contracts_Request</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Contracts Request</label>
</RecordType>