force-app/main/default/objects/Case/recordTypes/DX_CRN.recordType-meta.xml
<RecordType>
    <fullName>DX_CRN</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <description>Service Request for CRN</description>
    <label>CRN</label>
</RecordType>