force-app/main/default/objects/Case/recordTypes/DX_Cross_Connect.recordType-meta.xml
<RecordType>
    <fullName>DX_Cross_Connect</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Cross Connect</label>
</RecordType>