force-app/main/default/objects/Case/recordTypes/DX_Customer_Experience_Request.recordType-meta.xml
<RecordType>
    <fullName>DX_Customer_Experience_Request</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Customer Experience Request</label>
</RecordType>