force-app/main/default/objects/Case/recordTypes/DX_Expansion_of_Services.recordType-meta.xml
<RecordType>
    <fullName>DX_Expansion_of_Services</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Expansion of Services</label>
</RecordType>