force-app/main/default/objects/Case/recordTypes/DX_Logistics.recordType-meta.xml
<RecordType>
    <fullName>DX_Logistics</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Logistics</label>
</RecordType>