force-app/main/default/objects/Case/recordTypes/DX_Remote_Hands_Support.recordType-meta.xml
<RecordType>
    <fullName>DX_Remote_Hands_Support</fullName>
    <active>true</active>
    <businessProcess>PNS Service Request</businessProcess>
    <label>Remote Hands Support</label>
</RecordType>