force-app/main/default/objects/Case/recordTypes/STL.recordType-meta.xml
<RecordType>
    <fullName>STL</fullName>
    <active>true</active>
    <businessProcess>STL</businessProcess>
    <label>STL</label>
</RecordType>