force-app/main/default/objects/Case/recordTypes/X1102_Grand.recordType-meta.xml
<RecordType>
    <fullName>X1102_Grand</fullName>
    <active>true</active>
    <businessProcess>1102 Grand</businessProcess>
    <label>1102 Grand</label>
</RecordType>