force-app/main/default/objects/Case/recordTypes/X1301_Fannin.recordType-meta.xml
<RecordType>
    <fullName>X1301_Fannin</fullName>
    <active>true</active>
    <businessProcess>1301 Fannin</businessProcess>
    <label>1301 Fannin</label>
</RecordType>