force-app/main/default/objects/Case/recordTypes/X401_N_Broad.recordType-meta.xml
<RecordType>
    <fullName>X401_N_Broad</fullName>
    <active>true</active>
    <businessProcess>401 N Broad</businessProcess>
    <label>401 N Broad</label>
</RecordType>