force-app/main/default/objects/Case/recordTypes/X717_S_Wells.recordType-meta.xml
<RecordType>
    <fullName>X717_S_Wells</fullName>
    <active>true</active>
    <businessProcess>717 S Wells</businessProcess>
    <label>717 S Wells</label>
</RecordType>