force-app/main/default/objects/Case/validationRules/DX_CRN_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>DX_CRN_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(text(Status) = &apos;Closed&apos;, ISBLANK(DX_CRN_Date__c),  RecordType.DeveloperName = &apos;DX_CRN&apos;)</errorConditionFormula>
    <errorMessage>CRN date is required to be filled for a case to be closed</errorMessage>
</ValidationRule>