force-app/main/default/objects/Case/validationRules/DX_Departure_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>DX_Departure_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DX_Departure_Date__c &gt;=  DX_Arrival_Date__c + 14)</errorConditionFormula>
    <errorDisplayField>DX_Departure_Date__c</errorDisplayField>
    <errorMessage>Departure Date can&apos;t exceed 14 calendar Days from Arrival Date</errorMessage>
</ValidationRule>