force-app/main/default/objects/Case/validationRules/Prevent_Change_Owner_If_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_Owner_If_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; ISPICKVAL(Status, &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>You cannot change the owner of a closed case.</errorMessage>
</ValidationRule>