force-app/main/default/objects/Case/listViews/DX_HOU_OPS_Queue_Case.listView-meta.xml
<ListView>
    <fullName>DX_HOU_OPS_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HOU Ops Queue</label>
    <queue>DX_HOU_OPS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>