force-app/main/default/objects/Case/listViews/DX_PHL_After_Hours_Queue_Case.listView-meta.xml
<ListView>
    <fullName>DX_PHL_After_Hours_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PHL After Hours Queue</label>
    <queue>DX_PHL_After_Hours_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>