force-app/main/default/objects/Case/listViews/DX_PHL_OPS_Queue_Case.listView-meta.xml
<ListView>
    <fullName>DX_PHL_OPS_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DX_Location__c</field>
        <operation>equals</operation>
        <value>PHI</value>
    </filters>
    <label>PHL Ops Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>