force-app/main/default/objects/Case/listViews/DX_Queue_Case.listView-meta.xml
<ListView>
    <fullName>DX_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CX Queue</label>
    <queue>DX_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>