force-app/main/default/objects/Case/listViews/DX_STL_Ops_Queue_Case.listView-meta.xml
<ListView>
    <fullName>DX_STL_Ops_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>STL Ops Queue</label>
    <queue>DX_STL_Ops_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>