force-app/main/default/objects/Case/listViews/Issuing_CRN.listView-meta.xml
<ListView>
    <fullName>Issuing_CRN</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>DX_Service_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Issuing CRN</value>
    </filters>
    <label>Issuing CRN</label>
</ListView>